Correcting Human Exterminate input (Still bugs in the Explore/Exterminate possibilities)